--- a/src/components/ChatBotFooter/ChatBotFooter.css
+++ b/src/components/ChatBotFooter/ChatBotFooter.css
@@ -6,7 +6,6 @@
 	padding-left: 10px;
 	padding-right: 16px;
 	border-top: 1px solid #ccc;
-	height: 50px;
 	max-height: 55px;
 	display: flex;
 	justify-content: space-between;
