--- a/src/components/ChatBotHeader/ChatBotHeader.css
+++ b/src/components/ChatBotHeader/ChatBotHeader.css
@@ -6,7 +6,7 @@
 	border-bottom: 1px solid #ccc;
 	display: flex;
 	justify-content: space-between;
-	max-height: 60px;
+	max-height: 55px;
 }
 
 .rcb-chat-header {
